fea-rs/test-data/compile-tests/mini-latin/bad/bad_size4.fea
feature size {
    parameters 6 0;
   sizemenuname "statement not allowed if no subfamily/range present";
} size;
